dela razen demoUrl in repoUrl pri home lab

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -66,3 +66,7 @@ const { title, description, image = "/open-graph.jpg" } = Astro.props
     ].forEach((link) => link.remove())
   )
 </script>
+
+<!-- Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3646137317983903"
+     crossorigin="anonymous"></script>
