--- a/src/pages/search/index.astro
+++ b/src/pages/search/index.astro
@@ -12,7 +12,11 @@ const posts = (await getCollection("blog"))
 const projects = (await getCollection("projects"))
   .filter(post => !post.data.draft)
 
-const data = [...posts, ...projects] as CollectionEntry<"blog">[]
+  const homeLab = (await getCollection("homeLab"))
+  .filter(post => !post.data.draft)
+
+
+const data = [...posts, ...projects, ...homeLab] as CollectionEntry<"blog">[]
 ---
 
 <PageLayout title={SEARCH.TITLE} description={SEARCH.DESCRIPTION}>
