--- a/src/layouts/ArticleTopLayout.astro
+++ b/src/layouts/ArticleTopLayout.astro
@@ -71,7 +71,8 @@ const repoUrl = (collection === "projects" || collection === "homeLab") ? data.r
           <use href="/ui.svg#link" class="fill-current group-hover:fill-black group-hover:dark:fill-white blend"/>
         </svg>
         <span class="text-current group-hover:text-black group-hover:dark:text-white blend">
-          See Repository
+          {/* FIXME: spremeni da na podlagi parametra napiše view documentation ali repository */}
+          View Documentation / Repository
         </span>
       </a>
     }
