View Demo spremenjeno v View Project Website

--- a/src/layouts/ArticleTopLayout.astro
+++ b/src/layouts/ArticleTopLayout.astro
@@ -61,7 +61,7 @@ const repoUrl = (collection === "projects" || collection === "homeLab") ? data.r
           <use href="/ui.svg#globe" class="fill-current group-hover:fill-black group-hover:dark:fill-white blend"/>
         </svg>
         <span class="text-current group-hover:text-black group-hover:dark:text-white blend">
-          See Demo
+          View Project Website
         </span>
       </a>
     }
