dodane icone pri work

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,8 @@ import Container from "@components/Container.astro"
               <svg class="size-6 fill-current">
                 <use href="/brand.svg#brand"/>
               </svg>
-              {SITE.TITLE}
+              <!-- NOTE: NOT USING SITE TITLE IN FOOTER -->
+              <!-- {SITE.TITLE} -->
             </a>
           </div>
           <div class="flex gap-2 justify-center sm:justify-end items-center">
