--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -203,6 +203,36 @@ const stackRunningOn = [
         </article>
       </section>
 
+      <!-- Home Lab Preview Section -->
+      <section class="animate">
+        <div class="space-y-4">
+          <div class="flex justify-between">
+            <p class="font-semibold text-black dark:text-white">
+              Recent documents from Home Lab
+            </p>
+            <a
+              href="/homeLab"
+              class="w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend"
+            >
+              <span
+                class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend"
+              >
+                All Home Lab documents
+              </span>
+            </a>
+          </div>
+          <ul class="space-y-4">
+            {
+              homeLab.map((homeLab) => (
+                <li>
+                  <ArrowCard entry={homeLab} />
+                </li>
+              ))
+            }
+          </ul>
+        </div>
+      </section>
+
       <!-- Blog Preview Section -->
       <section class="animate">
         <div class="space-y-4">
@@ -254,36 +284,6 @@ const stackRunningOn = [
               projects.map((project) => (
                 <li>
                   <ArrowCard entry={project} />
-                </li>
-              ))
-            }
-          </ul>
-        </div>
-      </section>
-
-      <!-- Project Preview Section -->
-      <section class="animate">
-        <div class="space-y-4">
-          <div class="flex justify-between">
-            <p class="font-semibold text-black dark:text-white">
-              Recent documents from Home Lab
-            </p>
-            <a
-              href="/homeLab"
-              class="w-fit col-span-3 group flex gap-1 items-center underline decoration-[.5px] decoration-black/25 dark:decoration-white/50 hover:decoration-black dark:hover:decoration-white text-black dark:text-white underline-offset-2 blend"
-            >
-              <span
-                class="text-black/75 dark:text-white/75 group-hover:text-black group-hover:dark:text-white blend"
-              >
-                All Home Lab documents
-              </span>
-            </a>
-          </div>
-          <ul class="space-y-4">
-            {
-              homeLab.map((homeLab) => (
-                <li>
-                  <ArrowCard entry={homeLab} />
                 </li>
               ))
             }
