--- a/src/layouts/ArticleBottomLayout.astro
+++ b/src/layouts/ArticleBottomLayout.astro
@@ -2,7 +2,7 @@
 import { type CollectionEntry, getCollection } from "astro:content"
 
 type Props = {
-  entry: CollectionEntry<"blog"> | CollectionEntry<"projects"> | CollectionEntry<"homeLab">
+  entry: CollectionEntry<"projects"> | CollectionEntry<"devHub">
 }
 
 // Get the requested entry
