--- a/src/pages/connect/[...slug].astro
+++ b/src/pages/connect/[...slug].astro
@@ -6,30 +6,30 @@ import BottomLayout from "@layouts/BottomLayout.astro"
 import ArticleTopLayout from "@layouts/ArticleTopLayout.astro"
 import ArticleBottomLayout from "@layouts/ArticleBottomLayout.astro"
 
-// Create the static blog pages
+// Create the static home_lab pages
 export async function getStaticPaths() {
-	const posts = await getCollection("blog")
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
+	const devHub = await getCollection("devHub")
+	return devHub.map((devHubPost) => ({
+		params: { slug: devHubPost.slug },
+		props: devHubPost,
 	}))
 }
 
-// Get the requested post
-type Props = CollectionEntry<"blog">
-const post = Astro.props
-const { title, summary } = post.data
+// Get the requested project
+type Props = CollectionEntry<"devHub">
+const devHubPost = Astro.props
+const { title, summary } = devHubPost.data
 ---
 
 <PageLayout title={title} description={summary}>
   <TopLayout>
     <div class="animate">
-      <ArticleTopLayout entry={post}/>
+      <ArticleTopLayout entry={devHubPost} />
     </div>
   </TopLayout>
   <BottomLayout>
     <div class="animate">
-      <ArticleBottomLayout entry={post} />
+      <ArticleBottomLayout entry={devHubPost} />
     </div>
   </BottomLayout>
 </PageLayout>
