--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -169,7 +169,7 @@ const stackRunningOn = [
                             View projects
                         </a>
                         <a
-                            href="/work"
+                            href="/journey"
                             class="py-2 px-4 truncate rounded text-xs md:text-sm lg:text-base border border-black/25 dark:border-white/25 hover:bg-black/5 hover:dark:bg-white/15 blend"
                         >
                             Work experiences
